# RreadFEH

./: .gitignore  README.md  codebook_2087ds.sipp2006  pyproject.toml  read_codebook.R  read_feh.R  setup.py
Python/: data-manager-sample-calls.ipynb  death.py  dev-read-feh.ipynb  read_codebook.py  read_feh.py  test-feh.py
R/: data-manager-sample-calls.Rmd  read_feh.R  write_headers_to_csv.R
R/FEHreadR/: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.Rmd  README.md
R/FEHreadR/R/: R-example-calls.Rmd  data_manager_main.R  edit_feh_input_files.R  read_feh_micro.R
R/FEHreadR/man/: dm_connect.Rd  dm_download_file.Rd  dm_generate_dataset.Rd  dm_get_dataset_status.Rd  dm_get_project.Rd  dm_get_projects.Rd  dm_get_scenarios.Rd  dm_get_scenarios_for_project.Rd  dm_get_variables_for_project.Rd  dm_request_and_download_datasets.Rd  feh_read.Rd  feh_read_alters.Rd  feh_update_alters.Rd  feh_wide_to_long.Rd  feh_write_new_input.Rd  get_record_types.Rd  make_col_names.Rd  make_record_struct.Rd  parse_codebook_lines.Rd  parse_family_codebook.Rd  parse_person_codebook.Rd  print_diff.Rd  read_feh.Rd  read_feh_cbk.Rd
R/FEHreadR/tests/: testthat.R
R/FEHreadR/tests/testthat/: test-edit_feh_input_files.R  test-read_feh_micro.R
R/FEHreadR/tests/testthat/fixtures/: fehout_10obs.csv  rundynasipp.inp
data-manager/: README.md  requirements.txt
data-manager/R_src/: R-example-calls.Rmd  data-manager-main.R
data-manager/python_src/: DataManager.py  python-sample-calls.ipynb
data-manager/tests/: tests.py
feh_io/: read_feh.py  save_feh.py
src/: data-manager-sample-calls.ipynb
src/feh_io/: __init__.py  data_manager.py  feh_reader.py  read_feh.py  save_feh.py
src/feh_io/save_feh/: __init__.py
tests/: test-data-manager.py  test-feh-io.py
